<resources>
    <string name="app_name">Just Java</string>
    <string name="Name">Name</string>
    <string name="name">Name</string>
    <string name="toppings">toppings</string>
    <string name="Whipped_cream">Whipped cream</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Quantity">Quantity</string>
    <string name="Order">Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="add_whippedcream">Add whipped cream?</string>
</resources>
